# eAlignment

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
align/: __init__.py  common.py  config.py  data.py  eval.py  io.py  prompts.py
configs/: ablations.yaml  dpo.yaml  dpo_smoke.yaml  ds_zero2.json  eval.yaml  eval_smoke.yaml  profiles.yaml  sft.yaml  sft_lora_nodeepspeed.yaml  sft_lora_nodeepspeed_smoke.yaml  sft_plain.yaml  sft_plain_smoke.yaml  sft_qlora.yaml  sft_smoke.yaml
configs/data/: dataset_info.template.json  preference_schema.yaml  (+2 more)
dev/: chinese_data_pipeline.md  jddc_testing.md  minimal_sft_logging.md  sft_lora_nodeepspeed.md  sft_plain_fallback.md
reports/: logging_inventory.json  loss_curve_20260320T083158Z_sft-lora-nodeepspeed_qwen3-8b.json  sft_bad_cases.jsonl  sft_data_audit.md  sft_run_summary_20260320T083158Z_sft-lora-nodeepspeed_qwen3-8b.md
runs/: dpo.sh  eval.sh  sft.sh  smoke.sh
scripts/: audit_sft_data.py  badcases.py  compare_sft_generations.py  eval.py  export_model.sh  launch_dpo.sh  launch_sft.sh  plan_ablations.py  plot_loss.py  prepare_data.py  prepare_dpo_data.py  prepare_pref.py  prepare_sft_data.py  run_eval.py  summarize_badcases.py
src/: __init__.py
tests/: test_ablation_plan.py  test_configs.py  test_data.py  test_data_pipeline.py  test_dpo_launch.py  test_eval.py  test_eval_pipeline.py  test_eval_scoring.py  test_import_sanity.py  test_imports.py  test_preference_quality.py  test_samples.py  test_schema_validation.py  test_sft_launch.py  test_sft_logging.py  test_smoke.py  test_smoke_assets.py
(+90 files in other folders)
