[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecommerce-support-alignment"
version = "0.1.0"
description = "Framework-first alignment repo for Chinese e-commerce support using LLaMA-Factory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
